syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pm.billingservice.grpc";

// --- MESSAGES ---
message BillingRequest {
    string patientId = 1;
    string name = 2;
    string email = 3;
}

message BillingResponse {
    string accountId = 1;
    string status = 2;
}

message PatientDeletionRequest {
    string patient_id = 1;
}

// --- SERVICE ---
service BillingService {
    rpc createBillingAccount(BillingRequest) returns (BillingResponse);
    rpc processPatientDeletion(PatientDeletionRequest) returns (BillingResponse);
}